Update proyecto final

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Preentrega 3-Index</title>
+    <title>AV-Inicio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -56,24 +58,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/banner_index_1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/banner_index_1.jpg" class="d-block w-100" alt="Imagen de un estudio de diseño">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5>Tu mejor opción</h5>
+                        <p>Nuestra experiencia y compromiso con la excelencia.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/banner_index_2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/banner_index_2.jpg" class="d-block w-100" alt="Personas bocetando una aplicacion movil">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>Diseño UX</h5>
+                        <p>Diseñamos experiencias digitales que son intuitivas.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/banner_index_3.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/banner_index_3.jpg" class="d-block w-100" alt="Personas trabajando frente a un pintarron">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Conocenos</h5>
+                        <p>Nos apasiona el diseño en todas sus formas.</p>
                     </div>
                 </div>
             </div>
@@ -93,7 +95,7 @@
             <div class="row justify-conter-center align-items-center">
                 <div class="col-md-6 col-sm-12">
                     <div class="">
-                        <h2>Bienvenido a AV agencia creativa</h2>
+                        <h1>Bienvenido a AV agencia creativa</h1>
                         <P>Somos tu destino creativo para todo lo relacionado con diseño. Desde la conceptualización
                             hasta la implementación, estamos aquí para convertir tus ideas en realidad. Explora nuestro
                             sitio y descubre cómo podemos hacer que tus proyectos cobren vida.</P>
@@ -112,7 +114,7 @@
                 <h3>Nuestros servicios</h3>
                 <div class="  pb-5 col-lg-3 col-md-6 col-ms-6 ">
                     <div class="card">
-                        <img src="./assets/images/service_1.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_1.jpg" class="card-img-top" alt="Persona trabajando en computadora">
                         <div class="card-body ">
                             <h5 class="card-title">Diseño gráfico</h5>
                             <p class="card-text">Nuestro equipo de diseñadores gráficos expertos transformará tus ideas
@@ -124,7 +126,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card ">
-                        <img src="./assets/images/service_2.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_2.jpg" class="card-img-top" alt="Personas trabajando en un pintarron">
                         <div class="card-body">
                             <h5 class="card-title">Diseño de logotipos</h5>
                             <p class="card-text">Crea una identidad visual única y memorable para tu marca con un
@@ -135,7 +137,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
                     <div class="card">
-                        <img src="./assets/images/service_3.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_3.jpg" class="card-img-top" alt="Persona dibujando un logotipo">
                         <div class="card-body">
                             <h5 class="card-title">Identidad de marca</h5>
                             <p class="card-text">Desde el diseño de logotipos hasta la selección de colores y
@@ -147,7 +149,7 @@
                 </div>
                 <div class="pb-5 col-lg-3 col-md-6  col-ms-6">
                     <div class="card">
-                        <img src="./assets/images/service_4.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/images/service_4.jpg" class="card-img-top" alt="Persona diseñando una aplicacion movil">
                         <div class="card-body">
                             <h5 class="card-title">Diseño de sitios web</h5>
                             <p class="card-text">Desarrollamos sitios web personalizados y visualmente atractivos que no
@@ -165,7 +167,7 @@
                 <div class="col">
                     <div class="banner_servicies_container">
                         <div class="container">
-                            <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, iste.</h2>
+                            
                         </div>
                     </div>
                 </div>
@@ -176,7 +178,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <div>
-                        <h2>En Av creativos, nos apasiona el diseño en todas sus formas.</h2>
+                        <h5>En Av creativos, nos apasiona el diseño en todas sus formas.</h5>
                         <P>Con un equipo de talentosos diseñadores y desarrolladores, nos esforzamos por ofrecer
                             soluciones innovadoras y creativas que superen las expectativas de nuestros clientes.
                             Nuestra experiencia y compromiso con la excelencia nos distinguen en el campo del diseño.
