--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--link boostrap-->
+    <meta name="title" content="AV creativos">
+    <meta name="description"
+        content="Av creativos es un estudio de diseño que ofrece soluciones de diseño web, diseño de experiencia de usuario, diseño gráfico y branding a empresas medianas y pequeñas que requieren de aplicaciones, webs y diseño en general.">
+    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Av creativos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Prentrega 3-Services_contact</title>
+    <title>AV-Contacto</title>
     <link rel="stylesheet" href="../css/style.css">
+    
 </head>
 
 <body>
@@ -42,42 +52,44 @@
             </div>
         </nav>
     </header>
-    <section class="contact_info container">
-        <div class="row justify-conter-center align-items-center">
-            <div class="col-md-6 col-sm-12 pb-5">
-                <h1>¿Listo para llevar tus proyectos al siguiente nivel?</h1>
-                <p>Nos encantaría escucharte! En [Nombre de tu Empresa], estamos aquí para responder a todas tus
-                    preguntas, discutir tus ideas y ayudarte a hacer realidad tus sueños creativos.
-                    Ya sea que estés interesado en nuestros servicios, tengas consultas sobre nuestros procesos o
-                    simplemente quieras saludar, estamos listos para conectarnos contigo.
-                </p>
+    <main>
+        <section class="contact_info container">
+            <div class="row justify-conter-center align-items-center">
+                <div class="col-md-12 col-sm-12 col-lg-6 pb-5">
+                    <h1>¿Listo para llevar tus proyectos al siguiente nivel?</h1>
+                    <p>Nos encantaría escucharte! En Av creativos, estamos aquí para responder a todas tus
+                        preguntas, discutir tus ideas y ayudarte a hacer realidad tus sueños creativos.
+                        Ya sea que estés interesado en nuestros servicios, tengas consultas sobre nuestros procesos o
+                        simplemente quieras saludar, estamos listos para conectarnos contigo.
+                    </p>
+                </div>
+                <form class="col-md-12 col-sm-12 col-lg-6 pb-5">
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="email_address" placeholder="name@example.com"
+                            name="email">
+                        <label for="email_address">Email address</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="phone_number" placeholder="name@example.com"
+                            name="phone">
+                        <label for="phone_number">Phone number</label>
+                    </div>
+                    <div class="form-floating">
+                        <textarea class="form-control" placeholder="Leave a comment here" id="text_comments"
+                            style="height: 100px" name="comments"></textarea>
+                        <label for="text_comments">Comments</label>
+                    </div>
+                    <div class="mb-3 form-check pb-3 pt-2">
+                        <input type="checkbox" class="form-check-input" id="accept_ckeck_box">
+                        <label class="form-check-label" for="accept_ckeck_box">Accept</label>
+                    </div>
+                    <button type="submit" class="btn btn-outline-secondary w-100">Submit</button>
+                </form>
+
             </div>
-            <form class="col-md-6 col-sm-12 pb-5">
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="email_address" placeholder="name@example.com"
-                        name="email">
-                    <label for="email_address">Email address</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="phone_number" placeholder="name@example.com"
-                        name="phone">
-                    <label for="phone_number">Phone number</label>
-                </div>
-                <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="text_comments"
-                        style="height: 100px" name="comments"></textarea>
-                    <label for="text_comments">Comments</label>
-                </div>
-                <div class="mb-3 form-check pb-3 pt-2">
-                    <input type="checkbox" class="form-check-input" id="accept_ckeck_box">
-                    <label class="form-check-label" for="accept_ckeck_box">Accept</label>
-                </div>
-                <button type="submit" class="btn btn-outline-secondary w-100">Submit</button>
-            </form>
 
-        </div>
-
-    </section>
+        </section>
+    </main>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
         <section class="  container text-light ">
