--- a/pages/services.html
+++ b/pages/services.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Prentrega 3-Services</title>
+    <title>AV-servicios</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -43,119 +45,125 @@
             </div>
         </nav>
     </header>
-    <section class=" container pt-3 mt-5">
-        <div class=" service_info row justify-conter-center align-items-center text-center">
-            <div class="col mt-3">
-                <h1> Conoce nuestros servicios</h1>
-                <p>En AV creativos, ofrecemos una amplia gama de servicios de diseño para satisfacer todas tus
-                    necesidades creativas. Desde el diseño gráfico hasta el desarrollo web, estamos aquí para ayudarte a
-                    destacar en un mercado competitivo. Nuestros servicios incluyen:</p>
+    <main>
+        <section class=" container pt-3 mt-5">
+            <div class=" service_info row justify-conter-center align-items-center text-center">
+                <div class="col mt-3">
+                    <h1> Conoce nuestros servicios</h1>
+                    <p>En AV creativos, ofrecemos una amplia gama de servicios de diseño para satisfacer todas tus
+                        necesidades creativas. Desde el diseño gráfico hasta el desarrollo web, estamos aquí para
+                        ayudarte a
+                        destacar en un mercado competitivo. Nuestros servicios incluyen:</p>
+                </div>
             </div>
-        </div>
 
-        <!-- Services card-->
-        <section class=" card_items container mt-5 mb-5">
-            <div class="row">
-                <h3>Nuestros servicios</h3>
-                <div class=" pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Diseño Gráfico:</h5>
-                            <p class="card-text">Nuestro equipo de diseñadores gráficos expertos transformará tus ideas
-                                en imágenes impactantes y visualmente atractivas que comunicarán efectivamente tu
-                                mensaje.</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+            <!-- Services card-->
+            <section class=" card_items container mt-5 mb-5">
+                <div class="row">
+                    <h2>Nuestros servicios</h2>
+                    <div class=" pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_1.jpg" class="card-img-top" alt="Persona trabajando en computadora">
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño Gráfico:</h5>
+                                <p class="card-text">Nuestro equipo de diseñadores gráficos expertos transformará tus
+                                    ideas
+                                    en imágenes impactantes y visualmente atractivas que comunicarán...</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_2.jpg" class="card-img-top" alt="Personas trabajando en un pintarron">
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño de Logotipos:</h5>
+                                <p class="card-text">Crea una identidad visual única y memorable para tu marca con un
+                                    logotipo diseñado a medida que refleje la esencia y los valores de tu empresa.</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_3.jpg" class="card-img-top" alt="Persona dibujando un logotipo">
+                            <div class="card-body">
+                                <h5 class="card-title">Identidad de Marca:</h5>
+                                <p class="card-text">Desde el diseño de logotipos hasta la selección de colores y
+                                    tipografías, construiremos una identidad de marca cohesiva que te diferenciará en el
+                                    mercado y resonará con tu audiencia.</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_4.jpg" class="card-img-top" alt="Persona diseñando una web">
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño de Sitios Web:</h5>
+                                <p class="card-text">Desarrollamos sitios web personalizados y visualmente atractivos
+                                    que no
+                                    solo cautivan a los visitantes, sino que también ofrecen una experiencia de usuario
+                                    intuitiva y fluida.</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_5.jpg" class="card-img-top" alt="oficina con computadoras e imagenes de diseno">
+                            <div class="card-body">
+                                <h5 class="card-title">Desarrollo Web:</h5>
+                                <p class="card-text">Con nuestra experiencia en desarrollo web, creamos soluciones
+                                    digitales
+                                    robustas y escalables que cumplen con tus requisitos técnicos y funcionales más
+                                    exigentes.</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_6.jpg" class="card-img-top" alt="Persona trabajando en computadora">
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño de Aplicaciones Móviles:</h5>
+                                <p class="card-text">Desde el concepto hasta la implementación, diseñamos aplicaciones
+                                    móviles atractivas y fáciles de usar que...</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_7.jpg" class="card-img-top" alt="Persona diseñando una aplicacion movil">
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño de Interfaces de Usuario (UI):</h5>
+                                <p class="card-text"> Creamos interfaces de usuario elegantes y funcionales que
+                                    optimizan la
+                                    interacción entre el usuario y tu producto digital...</p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
+                        <div class="card">
+                            <img src="../assets/images/service_8.jpg" class="card-img-top" alt="Personas planeado una estrategia para ux">
+                            <div class="card-body">
+                                <h5 class="card-title">Diseño de Experiencia de Usuario (UX):</h5>
+                                <p class="card-text">Enfocados en la satisfacción del usuario, diseñamos experiencias
+                                    digitales que son intuitivas, eficientes y gratificantes...
+                                </p>
+                                <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Diseño de Logotipos:</h5>
-                            <p class="card-text">Crea una identidad visual única y memorable para tu marca con un
-                                logotipo diseñado a medida que refleje la esencia y los valores de tu empresa.</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Identidad de Marca:</h5>
-                            <p class="card-text">Desde el diseño de logotipos hasta la selección de colores y
-                                tipografías, construiremos una identidad de marca cohesiva que te diferenciará en el
-                                mercado y resonará con tu audiencia.</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Diseño de Sitios Web:</h5>
-                            <p class="card-text">Desarrollamos sitios web personalizados y visualmente atractivos que no
-                                solo cautivan a los visitantes, sino que también ofrecen una experiencia de usuario
-                                intuitiva y fluida.</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Desarrollo Web:</h5>
-                            <p class="card-text">Con nuestra experiencia en desarrollo web, creamos soluciones digitales
-                                robustas y escalables que cumplen con tus requisitos técnicos y funcionales más
-                                exigentes.</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Diseño de Aplicaciones Móviles:</h5>
-                            <p class="card-text">Desde el concepto hasta la implementación, diseñamos aplicaciones
-                                móviles atractivas y fáciles de usar que...</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Diseño de Interfaces de Usuario (UI):</h5>
-                            <p class="card-text"> Creamos interfaces de usuario elegantes y funcionales que optimizan la
-                                interacción entre el usuario y tu producto digital...</p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="pb-5 col-lg-3 col-md-6 col-ms-6">
-                    <div class="card">
-                        <img src="../assets/images/service_3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Diseño de Experiencia de Usuario (UX):</h5>
-                            <p class="card-text">Enfocados en la satisfacción del usuario, diseñamos experiencias
-                                digitales que son intuitivas, eficientes y gratificantes...
-                            </p>
-                            <a href="./service_name.html" class="btn btn-outline-secondary w-100">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </section>
         </section>
-    </section>
+    </main>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
-        <section class="  container text-light ">
+        <section class="container text-light ">
             <div class="row justify-conter-center align-items-center">
                 <div class="col-sm-12 col-md-3">
                     <ul class="list-inline">
