--- a/pages/service_name.html
+++ b/pages/service_name.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Diseño Gráfico, Folletos, Volantes, Carteles, Vallas publicitarias, Revistas, Libros, Packaging, Etiquetas, Ilustraciones, Personalizadas, Diseño de Logotipos, Rebranding, Identidad de Marca, Guías de estilo, Paleta de colores, Tipografías, Iconografía, Patrones, Tonos de comunicación, Voz de marca, Diseño de Sitios Web, Responsivos, Estáticos, Dinámicos, Adaptados a móviles, Comercio electrónico, Landing pages, Micrositios,Desarrollo Web, Programación , Codificación, Funcionalidades personalizadas, Optimización del rendimiento, Integración de APIs, Mantenimiento , Actualización continua, Diseño de Aplicaciones Móviles, Interfaces de usuario (UI), Prototipos, Wireframes, Iconos, Experiencias de usuario (UX), Pruebas de usabilidad, Optimización, Diseño de Interfaces de Usuario (UI), Diseños, intuitivos, Elementos de navegación,  Estructura de información, Prototipado, Implementación de principios de diseño
+    Diseño de Experiencia de Usuario (UX), Investigación de usuarios, Mapas de experiencia, Arquitectura de la, información, Evaluación de la usabilidad, Iteración, Mejora continua">
     <!--link boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Prentrega 3-Services_name</title>
+    <title>AV-servicios_web</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -44,44 +46,49 @@
             </div>
         </nav>
     </header>
-    <section class="container">
-        <div class="row justify-conter-center align-items-center">
-            <div class="col-md-12">
-                <h1>Servicios Web</h1>
-            </div>
-        </div>
-
-        <section class="service_name_info container-fluid">
-            <div class="row">
-                <video muted="" autoplay="" loop=""
-                    src="https://storage.googleapis.com/cms-storage-bucket/029113ae2cbbcf9493fe.mp4" type="video/mp4"
-                    width="950">
-                    <img src="https://storage.googleapis.com/cms-storage-bucket/a667e994fc2f3e85de36.png" alt="Fast">
-                </video>
-                <div class="col-sm-12">
-                    <h3>¿Qué contienen nuestros servicios web ?</h3>
-                    <p>Nuestros servicios web están diseñados para ofrecerte una presencia en línea impactante y
-                        efectiva. Ya sea que necesites un sitio web informativo o una tienda en línea completa, nuestro
-                        equipo de expertos en diseño y desarrollo trabajará contigo para crear una experiencia digital
-                        única. Explora nuestros servicios web, que incluyen:
-                    <ol>
-                        <li> Diseño y desarrollo de sitios web personalizados</li>
-                        <li> Desarrollo de tiendas en línea</li>
-                        <li> Optimización de motores de búsqueda (SEO)</li>
-                        <li> Diseño responsive y adaptado a dispositivos móviles</li>
-                        <li> Integración de redes sociales</li>
-                        <li> Mantenimiento y soporte continuo del sitio web</li>
-                        <li> Gestión de contenido</li>
-                        <li> Análisis y seguimiento del rendimiento del sitio web</li>
-                    </ol>
-                    Con Av creativos, puedes estar seguro de que tu presencia en línea estará en buenas manos.
-                    Contáctanos hoy para comenzar tu viaje digital.
-                    </p>
+    <main>
+        <section class="container">
+            <div class="row justify-conter-center align-items-center">
+                <div class="col-md-12">
+                    <h1>Servicios Web</h1>
                 </div>
             </div>
 
+            <section class="service_name_info container-fluid">
+                <div class="row">
+                    <video muted="" autoplay="" loop=""
+                        src="https://storage.googleapis.com/cms-storage-bucket/029113ae2cbbcf9493fe.mp4"
+                        type="video/mp4" width="950">
+                        <img src="https://storage.googleapis.com/cms-storage-bucket/a667e994fc2f3e85de36.png"
+                            alt="Fast">
+                    </video>
+                    <div class="col-sm-12">
+                        <h2>¿Qué contienen nuestros servicios web ?</h2>
+                        <p>Nuestros servicios web están diseñados para ofrecerte una presencia en línea impactante y
+                            efectiva. Ya sea que necesites un sitio web informativo o una tienda en línea completa,
+                            nuestro
+                            equipo de expertos en diseño y desarrollo trabajará contigo para crear una experiencia
+                            digital
+                            única. Explora nuestros servicios web, que incluyen:
+                        <ol>
+                            <li> Diseño y desarrollo de sitios web personalizados</li>
+                            <li> Desarrollo de tiendas en línea</li>
+                            <li> Optimización de motores de búsqueda (SEO)</li>
+                            <li> Diseño responsive y adaptado a dispositivos móviles</li>
+                            <li> Integración de redes sociales</li>
+                            <li> Mantenimiento y soporte continuo del sitio web</li>
+                            <li> Gestión de contenido</li>
+                            <li> Análisis y seguimiento del rendimiento del sitio web</li>
+                        </ol>
+                        Con Av creativos, puedes estar seguro de que tu presencia en línea estará en buenas manos.
+                        Contáctanos hoy para comenzar tu viaje digital.
+                        </p>
+                    </div>
+                </div>
+
+            </section>
         </section>
-    </section>
+    </main>
     <!-- Footer-->
     <footer class="container-fluid footer mt-5">
         <section class="  container text-light ">
